# plc-comm-slmp-python

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  TODO.md  build_docs.bat  build_docs_publish.bat  mkdocs.yml  pyproject.toml  release_check.bat  run_ci.bat  slmp.spec
.github/: RELEASE_TEMPLATE.md  RELEASE_v0.1.0.md  RELEASE_v0.1.2.md
.github/workflows/: automated-release.yml  ci.yml
docs/: 404.html  index.html  objects.inv  sitemap.xml
docs/CHANGELOG/: index.html
docs/maintainer/: index.html
docs/search/: search_index.json
docsrc/: CHANGELOG.md  index.md
docsrc/api/: client.md  constants.md  core.md
docsrc/maintainer/: PROTOCOL_SPEC.md  SCRIPT_REFERENCE.md  TESTING_GUIDE.md  communication_test_record.md  device_access_matrix_policy.md  error_code_reference.md  manual_implementation_differences.md  open_items.md  plc_device_range_expectations.md  plc_setting_change_log_template.md
docsrc/user/: BIT_DEVICE_ACCESS_TABLE.md  ERROR_CODES.md  GETTING_STARTED.md  LATEST_COMMUNICATION_VERIFICATION.md  SAMPLES.md  SUPPORTED_REGISTERS.md  USER_GUIDE.md
internal_docs/: regression_suite_latest.md
internal_docs/archive/: regression_suite_20260319_121519_404983.md  regression_suite_20260319_121558_427437.md  regression_suite_20260319_182014_396966.md
internal_docs/compatibility_192_168_250_100_n00_sff/: compatibility_probe_latest.json  compatibility_probe_latest.md
internal_docs/compatibility_fx5u/: compatibility_probe_latest.json  compatibility_probe_latest.md
internal_docs/compatibility_fx5uc/: compatibility_probe_latest.json  compatibility_probe_latest.md
internal_docs/compatibility_kv7500_mc/: compatibility_probe_latest.json  compatibility_probe_latest.md
internal_docs/compatibility_kv_xle02_mc/: compatibility_probe_latest.json  compatibility_probe_latest.md
internal_docs/compatibility_l16hcpu/: compatibility_probe_latest.json  compatibility_probe_latest.md
internal_docs/compatibility_l26cpu_bt_sn11112/: compatibility_probe_latest.json  compatibility_probe_latest.md
samples/: 01_read_type_name.py  02_device_reads.py  03_random_and_block.py  05_target_header.py  06_label_reads.py  07_verify_3e_4e.py  08_async_sample.py  README.md  _common.py  high_level_async.py  high_level_sync.py
scripts/: README.md  fx5_discovery.py  fx5uc_master_validation.py  iql_series_master_validation.py  q_series_full_command_test.py  q_series_master_validation.py  q_series_matrix_sweep.py  q_series_test.py  slmp_compatibility_matrix_render.py  slmp_compatibility_probe.py  slmp_connection_check.py  slmp_device_access_matrix_sync.py  slmp_device_range_probe.py  slmp_extended_device_device_recheck.py  slmp_g_hg_extended_device_coverage.py  slmp_g_hg_extended_device_recheck.py  slmp_init_model_docs.py  slmp_interactive.py  slmp_manual_label_verification.py  slmp_manual_write_verification.py  slmp_mixed_block_compare.py  slmp_mixed_read_load.py  slmp_monitor.py  slmp_open_items_recheck.py  slmp_other_station_check.py  slmp_pending_live_verification.py  slmp_read_soak.py  slmp_register_boundary_probe.py  slmp_regression_suite.py  slmp_special_device_probe.py  slmp_supported_device_rw_probe.py  slmp_tcp_concurrency.py
slmp/: __init__.py  async_client.py  cli.py  client.py  constants.py  core.py  device_ranges.py  errors.py  utils.py
tests/: test_async_client.py  test_bugs_and_edges.py  test_cpu_operation_state.py  test_device_ranges.py  test_device_vectors.py  test_live_sim.py  test_live_sim_3e.py  test_live_sim_exhaustive.py  test_live_sim_mixed_frames.py  test_live_sim_ultimate.py  test_shared_spec.py  test_slmp.py  test_utils.py
(+1001 files in other folders)
